--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="#about">About</a></li>
       <li><a href="#our-team">Our Team</a></li>
       <li><a href="#different">Inside US</a></li>
-      <!-- <li><a href="#team-gallery">Gallery</a></li> -->
+      <li><a href="#team-gallery">Gallery</a></li>
     </ul>
   </nav>
 
@@ -284,44 +284,21 @@
   </section>
 
 
-  <!-- <section id="team-gallery">
+  <section id="team-gallery">
     <h2 style="margin-top: 5%;">Mpower Gallery</h2>
     <div class="team-gallery">
       <div class="gallery-item">
-        <img src="gallery/im20.jpeg" alt="Team Member 1">
+        <img src="gallery/1.jpeg" alt="Team Member 1">
       </div>
       <div class="gallery-item">
-        <img src="gallery/im13.jpeg" alt="Team Member 2">
+        <img src="gallery/2.jpeg" alt="Team Member 2">
       </div>
       <div class="gallery-item">
-        <img src="gallery/im3.jpeg" alt="Team Member 3">
+        <img src="gallery/5.jpeg" alt="Team Member 3">
       </div>
-      Repeat for more images -->
 
-
-
-  <!-- <div class="gallery-item">
-    <img src="gallery/im8.jpeg" alt="Team Member 1">
-  </div>
-  <div class="gallery-item">
-    <img src="gallery/im9.jpeg" alt="Team Member 2">
-  </div>
-  <div class="gallery-item">
-    <img src="gallery/im10.jpeg" alt="Team Member 3">
-  </div>
-
-  <div class="gallery-item">
-    <img src="gallery/im4.jpeg" alt="Team Member 1">
-  </div>
-  <div class="gallery-item">
-    <img src="gallery/im5.jpeg" alt="Team Member 2">
-  </div>
-  <div class="gallery-item">
-    <img src="gallery/im21.jpeg" alt="Team Member 3">
-  </div>
-
-  </div>
-  </section> -->
+    </div>
+  </section>
 
 </body>
 
